--- a/poem.rmd
+++ b/poem.rmd
@@ -1,7 +1,7 @@
 ---
 title: "git_01"
-author: "Math_116"
-date: "Fall semester"
+author: "christina Maayah"
+date: "september 2020"
 output: html_document
 ---
 
@@ -15,6 +15,14 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## First Verse 
 <!--Put the first five lines of a poem by Lewis Carrol in this section!-->
+
+'Tis the voice of the Lobster, I heard him declare   
+"You have baked me too brown: I must sugar my hair."    
+As a duck with its eyelids, so he with his nose  
+Trims his belt & his buttons, & turns out his toes.    
+  
+When the sands are all dry, he is gay as a lark,  
+
 
 ## Second Verse
 <!--Put the first five lines of a poem by Robert Frost here!-->
