--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,19 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+Where can I go  
+without my mount   
+all eager and quick   
+How will I know     
+in thicket ahead  
+is danger or treasure     
+when Body my good     
+bright dog is dead  
+  
+How will it be  
+to lie in the sky  
+without roof or door     
+and wind for an eye  
+  
+With cloud for shift  
+
